--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ layout: default
 
 <h1>Hola!</h1>
 <!-- TODO: Incluir contenido desde un archivo markdown? -->
-<p>EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE ofjorigr</p>
+<!-- nah, tan terrible es escribirlo en html? -->
