Arregla estilos y limpia contenido

--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@ layout: default
 ---
 
 <h1>Hola!</h1>
-<!-- TODO: Incluir contenido desde un archivo markdown? -->
-<!-- nah, tan terrible es escribirlo en html? -->
+
+<h3>Bienvenido a mi sitio.</h3>
+
+<p>
+    Eventualmente este será un lugar para publicar ideas, mostrar proyectos y entregar información para futuros empleadores.
+</p>
+
+<p>Hoy no hay nada 😰, pero vamos un paso a la vez 🎵</p>
